added base activity and fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,1 +1,5 @@
-<resources></resources>
+<resources>
+    <string name="menu_timeline">Timeline</string>
+    <string name="menu_trending">Trending</string>
+    <string name="menu_collection">Collections</string>
+</resources>
